basic working modal

--- a/part-3/grocer.html
+++ b/part-3/grocer.html
@@ -14,6 +14,20 @@
         &nbsp;<span id="cart-item-count">(3)</span>
       </button>
     </header>
+        <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+        <h2>Modal Header</h2>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the Modal Body</p>
+        <p>Some other text...</p>
+      </div>
+      <div class="modal-footer">
+        <h3>Modal Footer</h3>
+      </div>
+    </div>
 
     <div class="flex flex-full">
       <div class="sidebar">
