--- a/part-3/grocer.html
+++ b/part-3/grocer.html
@@ -17,9 +17,9 @@
 
     <!-- Modal content -->
 
-    <div class="modal"></div>
+    <div class="modal-overlay"></div>
 
-    <div class="modal-content">
+    <div class="modal-container">
       <div class="modal-header">
         <h2 class="cart-title">Cart</h2>
         <h2 class="cart-close">X</h2>
