--- a/part-3/grocer.html
+++ b/part-3/grocer.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Grocer</title>
     <link rel="stylesheet" href="grocer.css">
-    <script src="modal.js" charset="utf-8"></script>
+    <script src="grocer.js" charset="utf-8"></script>
   </head>
   <body class="flex flex-column">
     <header class="site-header flex flex-row-between">
