display modal items

--- a/part-3/grocer.html
+++ b/part-3/grocer.html
@@ -23,11 +23,8 @@
         <h2 class="cart-title">Cart</h2>
         <h2 class="cart-close">X</h2>
       </div>
-      <div class="modal-body">
-        <p>Item name</p>
-        <p>Item name</p>
-        <p>Item name</p>
-      </div>
+      <div class="modal-items-section"></div>
+      
       <div class="modal-footer">
         <button>Clear</button>
         <div class="modal-total-section">
