add express and dependencies to part-1

--- a/part-3/grocer.html
+++ b/part-3/grocer.html
@@ -24,12 +24,12 @@
         <h2 class="cart-close">X</h2>
       </div>
       <div class="modal-items-section"></div>
-      
+
       <div class="modal-footer">
         <button>Clear</button>
         <div class="modal-total-section">
-          <span class="modal-total-title">Total</span>
-          <span class="modal-total-price">$0.00</span>
+          <span class="modal-total-title"><stong>Total</stong></span>
+          <span class="modal-total-price"><stong>$0.00</stong></span>
         </div>
       </div>
     </div>
